Organizar proyecto para entrega de semana 3